height overflow problem solved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,8 @@
 :root, body {
   height: 100%;
 }
+
+body {
+  display: flex;
+  flex-flow: column nowrap;
+}
